# isle-analyzer

./: .gitignore  Cargo.toml  README.md
client/testFixture/: completion.txt  diagnostics.txt
editors/code/: .vscodeignore  CONTRIBUTING.md  README.md  language-configuration.json  package-lock.json  package.json
editors/code/src/: configuration.ts  context.ts  extension.ts  log.ts  main.ts
src/: comment.rs  comment_test.txt  completion.rs  context.rs  document_symbol.rs  fmt.rs  goto_definition.rs  hover.rs  ide_test.rs  inlay_hitnt.rs  item.rs  lib.rs  main.rs  project.rs  project_visit.rs  references.rs  reload.rs  rename.rs  semantic_tokens.rs  show_rust_code.rs  utils.rs
tests/: bound_var.isle  tutorial.isle
