[package]
name = "isle-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.2.0"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
crossbeam = "0.8"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
stderrlog = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
cranelift-isle = {git = "https://github.com/yuyang-ok/wasmtime", package = "cranelift-isle", branch = "fix_col"}
url = "2.2.2"
walkdir = "2"
clap = { version = "4.2.0", features = ["derive"] }